--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
                         <p class="font-monospace">Looking to get the most out of your Forza Horizon 5 Experience? Check out our helpful interactive plots of player auction data.<br></p>
                         <p class="font-monospace">With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></p>
                         <p class="font-monospace">These graphs are updated regularly, so be sure to check back often!<br></p>
+                        <p class="font-monospace">Keep an eye out for more site updates, coming soon!!<br></p>
                     </div>
                     <div class="alert alert-info alert-dismissible" role="alert" style="border-color: var(--bs-gray-dark);background: rgba(255,193,7,0.25);margin: 16px;"><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         <h6 class="alert-heading">::::DATA REFRESH DATE ::::&nbsp;<br></h6>
-                        <p class="font-monospace text-uppercase fw-bolder">Plot data last updated: 07/15/2022<br></p><a class="alert-link" href="about.html">Read more about this data</a>
+                        <p class="font-monospace text-uppercase fw-bolder">Plot data last updated: 07/19/2022<br></p><a class="alert-link" href="about.html">Read more about this data</a>
                     </div>
                 </div>
             </div>
