Add logos to manufacturer plot info cards

--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/napier_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1023,7 +1023,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/nissan_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1039,7 +1039,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/noble_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1055,7 +1055,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/oldsmobile_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1071,7 +1071,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/pagani_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1103,7 +1103,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/peugeot_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1119,7 +1119,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/pontiac_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1135,7 +1135,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/porsche_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1167,7 +1167,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/renault_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1183,7 +1183,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/rimac_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1199,7 +1199,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/saleen_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1215,7 +1215,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/shelby_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1231,7 +1231,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/subaru_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1247,7 +1247,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/toyota_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1263,7 +1263,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/tvr_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1279,7 +1279,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/ultima_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1295,7 +1295,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/vauxhall_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1311,7 +1311,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/volkswagen_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1327,7 +1327,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/volvo_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1343,7 +1343,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/willys_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -1359,7 +1359,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
                                         <div class="card">
                                             <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/undraw_Predictive_analytics_re_wxt.png" width="200" height="200"></div>
+                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/zenvo_logo.png" width="200" height="200"></div>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
