--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Austin-Healey</p><a class="btn btn-outline-success" role="button" href="plots/AUSTIN-HEALEY-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Austin-Healey</p><a class="btn btn-outline-success" role="button" href="plots/AUSTIN-HEALEY.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -280,7 +280,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Auto Union</p><a class="btn btn-outline-success" role="button" href="plots/AUTOUNION-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Auto Union</p><a class="btn btn-outline-success" role="button" href="plots/AUTOUNION.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -296,7 +296,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from BAC</p><a class="btn btn-outline-success" role="button" href="plots/BAC-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from BAC</p><a class="btn btn-outline-success" role="button" href="plots/BAC.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -312,7 +312,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Bentley</p><a class="btn btn-outline-success" role="button" href="plots/BENTLEY-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Bentley</p><a class="btn btn-outline-success" role="button" href="plots/BENTLEY.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from BMW</p><a class="btn btn-outline-success" role="button" href="plots/BMW-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from BMW</p><a class="btn btn-outline-success" role="button" href="plots/BMW.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -344,7 +344,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Bugatti</p><a class="btn btn-outline-success" role="button" href="plots/BUGATTI-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Bugatti</p><a class="btn btn-outline-success" role="button" href="plots/BUGATTI.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -360,7 +360,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Buick</p><a class="btn btn-outline-success" role="button" href="plots/BUICK-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Buick</p><a class="btn btn-outline-success" role="button" href="plots/BUICK.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -376,7 +376,7 @@
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Cadillac</p><a class="btn btn-outline-success" role="button" href="plots/CADILLAC-landscape.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Cadillac</p><a class="btn btn-outline-success" role="button" href="plots/CADILLAC.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -1028,11 +1028,11 @@
                                             <div class="card-body">
                                                 <div class="row">
                                                     <div class="col">
-                                                        <h4>Masserati</h4>
+                                                        <h4>Maserati</h4>
                                                     </div>
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
-                                                <p>Models from Masserati</p><a class="btn btn-outline-success" role="button" href="plots/MASSERATI.html" target="_blank">View Interactive Plot</a>
+                                                <p>Models from Maserati</p><a class="btn btn-outline-success" role="button" href="plots/MASERATI.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
@@ -1257,22 +1257,6 @@
                                                     <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
                                                 </div>
                                                 <p>Models from Noble</p><a class="btn btn-outline-success" role="button" href="plots/NOBLE.html" target="_blank">View Interactive Plot</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
-                                        <div class="card">
-                                            <div class="row">
-                                                <div class="col" style="text-align: center;height: 200px;"><img class="img-fluid" src="assets/img/oldsmobile_logo.png" width="200" height="200"></div>
-                                            </div>
-                                            <div class="card-body">
-                                                <div class="row">
-                                                    <div class="col">
-                                                        <h4>Oldsmobile</h4>
-                                                    </div>
-                                                    <div class="col-2"><i class="fas fa-desktop fs-2" style="color: var(--bs-pink);"></i></div>
-                                                </div>
-                                                <p>Models from Oldsmobile</p><a class="btn btn-outline-success" role="button" href="plots/OLDSMOBILE.html" target="_blank">View Interactive Plot</a>
                                             </div>
                                         </div>
                                     </div>
