--- a/index.html
+++ b/index.html
@@ -40,40 +40,82 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid" style="padding: 0;">
+    <div class="container-fluid" style="padding: 0px;">
         <div class="row g-0">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
                         <h1 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Welcome to Forza Auction Data</h1>
                         <h5 style="font-weight: bold;color: var(--bs-pink);">Get the inside scoop on car auction prices in Forza Horizon 5!<br></h5>
-                        <p class="font-monospace">Looking to get the most out of your Forza Horizon 5 Experience? Check out our helpful interactive plots of player auction data.<br></p>
-                        <p class="font-monospace">With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></p>
-                        <p class="font-monospace">These graphs are updated regularly, so be sure to check back often!<br></p>
-                        <p class="font-monospace">Take a look at the new and improved manufacturer plots :D<br></p>
+                        <div class="row">
+                            <div class="col-2">
+                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-star"></i></p>
+                            </div>
+                            <div class="col">
+                                <p class="font-monospace">Looking to get the most out of your Forza Horizon 5 Experience? Drift down this page to take a look at our helpful interactive plots of player auction data.<br></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">
+                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-money-bill-wave"></i></p>
+                            </div>
+                            <div class="col">
+                                <p class="font-monospace">With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">
+                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-eye"></i></p>
+                            </div>
+                            <div class="col">
+                                <p class="font-monospace">These graphs are updated regularly, so be sure to check back often!<br></p>
+                            </div>
+                        </div>
                     </div>
                     <div class="alert alert-info alert-dismissible" role="alert" style="border-color: var(--bs-gray-dark);background: rgba(255,193,7,0.25);margin: 16px;"><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         <h6 class="alert-heading">::::DATA REFRESH DATE ::::&nbsp;<br></h6>
-                        <p class="font-monospace text-uppercase fw-bolder">Plot data last updated: 08/12/2022<br></p><a class="alert-link" href="about.html">Read more about this data</a>
+                        <p class="font-monospace text-uppercase fw-bolder">Plot data last updated: 08/12/2022<br></p>
+                        <p class="font-monospace">Check out the new and improved manufacturer plots :D<br></p><a class="alert-link" href="about.html">Read more about this data</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row g-0" style="margin: -7px;">
+        <div class="row g-0">
             <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h2 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Finished Auctions Scatter Plots</h2>
                         <h6 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">Are you trying to find the price history for different cars that are sold at the Auction House?&nbsp;These dynamic price trends can help you figure out the best time and price to buy or sell your favorite cars.<br></h6>
-                        <p>The following scatter plots present data about the winning bid amount over time.&nbsp;<br></p>
-                        <p>Each item represents a successful car auction and shows information about the winning bid amount, the time it was saved, and its performance rating.<br></p>
+                        <div class="row">
+                            <div class="col-2">
+                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock"></i></p>
+                            </div>
+                            <div class="col">
+                                <p>The scatter plots in the list below present data about the winning bid amount over time.&nbsp;<br></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">
+                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-truck-monster"></i></p>
+                            </div>
+                            <div class="col">
+                                <p>Each dot on a graph represents a successful car auction and will show information about the year, make and model, the winning bid amount, the time it was saved, and that car's performance rating.<br></p>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col" style="padding: 0px;">
                             <div class="card">
                                 <div class="card-body">
-                                    <h3 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Models by Manufacturer</h3>
-                                    <p>Find a car by its manufacturer. Compare prices for different car models from the same manufacturer.<br></p>
+                                    <h3 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Manufacturer Plots</h3>
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar"></i></p>
+                                        </div>
+                                        <div class="col">
+                                            <p>Find a car model by its manufacturer. Compare prices for different car models from the same manufacturer.<br></p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 col-xxl-3" style="padding: 2px;">
