--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg navigation-clean">
-        <div class="container"><a class="navbar-brand" href="index.html">Forza Auction Data&nbsp;<i class="fas fa-home" style="color: var(--bs-pink);"></i></a></div>
+    <nav class="navbar navbar-light navbar-expand-lg bg-light bg-gradient navigation-clean">
+        <div class="container-fluid"><a class="navbar-brand" href="index.html">Forza Auction Data&nbsp;<i class="fas fa-home" style="color: var(--bs-pink);"></i></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://forms.gle/WFog3UsgjTTh9BmJ9" target="_blank">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <div class="container-fluid">
         <div class="row">
