--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
     </nav>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col">
+        <div class="row justify-content-center">
+            <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
                 <div class="card">
                     <div class="card-body">
                         <div class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel" data-bs-interval="60000" id="carousel-1">
