--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 <div class="card">
                     <div class="card-body">
                         <h1 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Welcome to Forza Auction Data</h1>
-                        <h5 style="font-weight: bold;color: var(--bs-pink);">Get the inside scoop on car auction prices in Forza Horizon 5!<br></h5>
+                        <h5 style="font-weight: bold;color: var(--bs-pink);">Track Auction House prices for your favorite cars in Forza Horizon 5!<br></h5>
                         <div class="row">
                             <div class="col-2">
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-star"></i></p>
                             </div>
                             <div class="col">
-                                <p class="font-monospace">Looking to get the most out of your Forza Horizon 5 Experience? Drift down this page to take a look at our helpful interactive plots of player auction data.<br></p>
+                                <p class="font-monospace">Do you want to get the most out of your Forza Horizon 5 Auction House experience? Drift down this page to take a look at our interactive plots that will help you understand the dynamic pricing trends within the game.<br></p>
                             </div>
                         </div>
                         <div class="row">
@@ -92,7 +92,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Finished Auctions Scatter Plots</h2>
-                        <h6 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">Are you trying to find the price history for different cars that are sold at the Auction House?&nbsp;These dynamic price trends can help you figure out the best time and price to buy or sell your favorite cars.<br></h6>
+                        <h6 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">The trends or patterns shown in these plots can help you figure out the best time and price to buy or sell your favorite cars.<br></h6>
                         <div class="row">
                             <div class="col-2">
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock"></i></p>
@@ -120,7 +120,7 @@
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar"></i></p>
                                         </div>
                                         <div class="col">
-                                            <p>Find a car model by its manufacturer. Compare prices for different car models from the same manufacturer.<br></p>
+                                            <p>Find a car model by its manufacturer. Select and compare different car models from the same manufacturer.<br></p>
                                         </div>
                                     </div>
                                     <div class="row">
